[gd_scene load_steps=53 format=2]

[ext_resource path="res://scenes/characters/player/PlayerStates.gd" type="Script" id=1]
[ext_resource path="res://scenes/characters/player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/player/player-Sheet.png" type="Texture" id=3]
[ext_resource path="res://ui/gameplay/PlayerHud.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/characters/player/PlayerCamera.gd" type="Script" id=5]
[ext_resource path="res://assets/sfx/dash_empty.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sfx/dash_start.wav" type="AudioStream" id=7]
[ext_resource path="res://utils/RandomAudioPlayer.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sfx/foot_grass_4.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sfx/foot_grass_3.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sfx/foot_grass_2.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sfx/foot_grass_1.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sfx/foot_grass_land.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sfx/foot_grass_jump.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sfx/player_hurt_3.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sfx/player_hurt_2.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/sfx/player_hurt_1.wav" type="AudioStream" id=17]

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 120, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 3 )
region = Rect2( 168, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 3 )
region = Rect2( 0, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 3 )
region = Rect2( 24, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 3 )
region = Rect2( 48, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 3 )
region = Rect2( 72, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 3 )
region = Rect2( 96, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 3 )
region = Rect2( 120, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 24, 24 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 24, 96, 24, 24 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 48, 96, 24, 24 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 72, 96, 24, 24 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 0, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 3 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 3 )
region = Rect2( 24, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 3 )
region = Rect2( 48, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 3 )
region = Rect2( 72, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 3 )
region = Rect2( 96, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 3 )
region = Rect2( 120, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 3 )
region = Rect2( 0, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 3 )
region = Rect2( 24, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 3 )
region = Rect2( 48, 72, 24, 24 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "run",
"speed": 15.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": false,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 45 ) ],
"loop": false,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
}, {
"frames": [ SubResource( 58 ), SubResource( 59 ), SubResource( 60 ) ],
"loop": false,
"name": "jump",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=73]
extents = Vector2( 106, 16 )

[sub_resource type="RectangleShape2D" id=78]
extents = Vector2( 5, 8.5 )

[sub_resource type="AudioStreamRandomPitch" id=74]
audio_stream = ExtResource( 6 )
random_pitch = 1.05

[sub_resource type="AudioStreamRandomPitch" id=75]
audio_stream = ExtResource( 7 )
random_pitch = 1.05

[sub_resource type="AudioStreamRandomPitch" id=76]
audio_stream = ExtResource( 14 )

[sub_resource type="AudioStreamRandomPitch" id=77]
audio_stream = ExtResource( 13 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource( 2 )

[node name="PlayerStates" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Flip" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Flip"]
frames = SubResource( 15 )
animation = "idle"

[node name="Hitbox" type="Area2D" parent="Flip"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flip/Hitbox"]
position = Vector2( 94, -2 )
shape = SubResource( 73 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 78 )

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="PlayerCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.75, 0.75 )
drag_margin_h_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.1
drag_margin_top = 0.4
drag_margin_right = 0.1
drag_margin_bottom = 0.0
editor_draw_drag_margin = true
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="PlayerCamera"]

[node name="DashBufferTimer" type="Timer" parent="."]
wait_time = 0.07
one_shot = true

[node name="PlayerHud" parent="." instance=ExtResource( 4 )]

[node name="HitboxRayCast" type="RayCast2D" parent="."]
collision_mask = 9

[node name="DashEmptySFX" type="AudioStreamPlayer" parent="."]
stream = SubResource( 74 )
bus = "SFX"

[node name="DashStartSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource( 75 )
bus = "SFX"

[node name="FootstepSFX" parent="." instance=ExtResource( 8 )]
audio_streams = [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ) ]

[node name="JumpSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource( 76 )
bus = "SFX"

[node name="LandSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource( 77 )
bus = "SFX"

[node name="HurtSFX" parent="." instance=ExtResource( 8 )]
audio_streams = [ ExtResource( 17 ), ExtResource( 16 ), ExtResource( 15 ) ]

[node name="Listener2D" type="Listener2D" parent="."]
current = true

[connection signal="frame_changed" from="Flip/AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="body_entered" from="Flip/Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="Flip/Hitbox" to="." method="_on_Hitbox_body_exited"]
